opam-version: "2.0"
version: "0.4.1"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/migemocaml"
bug-reports: "https://github.com/derui/migemocaml"
dev-repo: "git+https://github.com/derui/migemocaml"
synopsis: "Private library for Migemocaml"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "2.0.0"}
  "logs" { < "0.8.0" & >= "0.7.0"}
  "menhir" {build}
  "alcotest" {with-test & < "2.0.0"}
  "astring" { < "0.9.0" & >= "0.8.0" }
  "camomile" { < "1.1.0" }
  "ppxlib" { < "0.23.0" & >= "0.22.0"}
  "ppx_show" { < "0.3" & >= "0.2.0"}
]
available: ["ocaml" >= "4.05.0"]
description: """
An execercise scheme implementation by OCaml
"""
